apps/minio/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ravijey-ingress
  namespace: minio

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/preserve-host: "true"

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - minio.ravijey.com
      secretName: minio-tls

  rules:
    - host: minio.ravijey.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
    - host: minio-console.ravijey.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 9001
